<resources>
    <string name="app_name">Temperature Converter</string>
    <string name="select_conversion">Select Conversion:</string>
    <string name="celsius_to_fahrenheit">Celsius to Fahrenheit</string>
    <string name="enter_value">Enter value:</string>
    <string name="equal_symbol">=</string>
    <string name="convert_button">Convert</string>
    <string name="recent_conversions">Recent Conversions:</string>
    <string name="fahrenheit_to_celsius">Fahrenheit to Celsius</string>
    <string name="recent_conversion_text">Recent Conversions:</string>
</resources>
